--- a/main.css
+++ b/main.css
@@ -99,6 +99,7 @@ h1 {
     font-size: 10vh;
     text-align: center;
     color: black;
+    vertical-align: middle;
 }
 
 .cont {
@@ -109,7 +110,7 @@ h1 {
 
 .contVid {
     position: sticky;
-    top: calc(45vh - 50px);
+    top: calc(45vh);
     font-size: 5vw;
     width: 40vw;
     right: 20px;
@@ -163,4 +164,7 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-image: url("bothpapers.jpg");
+    background-size: cover;
+    background-position: center;
 }
