--- a/main.css
+++ b/main.css
@@ -164,7 +164,7 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url("bothpapers.jpg");
+    background-image: url("bothPapers-min.jpg");
     background-size: cover;
     background-position: center;
 }
